--- a/gateway-android/build.gradle
+++ b/gateway-android/build.gradle
@@ -4,11 +4,11 @@ apply plugin: 'maven-publish'
 
 android {
 
-    compileSdkVersion 29
+    compileSdkVersion 32
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 29
+        targetSdkVersion 32
         versionName libraryVersionName
 
         consumerProguardFiles 'proguard.pro'
@@ -86,7 +86,7 @@ task androidSourcesJar(type: Jar) {
 publishing {
     publications {
         aar(MavenPublication) {
-            groupId = 'com.mastercard.gateway'
+            groupId = 'com.towbe.mastercard.gateway'
             artifactId project.name
             version = libraryVersionName
 
@@ -139,22 +139,12 @@ publishing {
             }
         }
     }
-}
-
-
-bintray {
-    user = System.getenv('BINTRAY_USER')
-    key = System.getenv('BINTRAY_API_KEY')
-    publications = ['aar']
-    publish = true
-    pkg {
-        repo = 'Android'
-        name = 'gateway-android-sdk'
-        userOrg = 'mpgs'
-        licenses = ['Apache-2.0']
-        vcsUrl = 'https://github.com/Mastercard/gateway-android-sdk.git'
-        version {
-            name = libraryVersionName
+    repositories {
+        maven {
+            url = 's3://maven.towbe.org'
+            authentication {
+                awsIm(AwsImAuthentication)
+            }
         }
     }
 }
